parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> for_list
Rule 2     for_list -> for_stmt
Rule 3     for_list -> for_stmt for_list
Rule 4     for_stmt -> expression FOR expression expression assign_stmt
Rule 5     assign_stmt -> ID LBRACKET expression RBRACKET ASSIGN expression
Rule 6     expression -> ADD expression expression
Rule 7     expression -> SUB expression expression
Rule 8     expression -> MUL expression expression
Rule 9     expression -> DIV expression expression
Rule 10    expression -> AND expression expression
Rule 11    expression -> OR expression expression
Rule 12    expression -> EQ expression expression
Rule 13    expression -> NE expression expression
Rule 14    expression -> LT expression expression
Rule 15    expression -> GT expression expression
Rule 16    expression -> LE expression expression
Rule 17    expression -> GE expression expression
Rule 18    expression -> NOT expression
Rule 19    expression -> SQRT expression
Rule 20    expression -> ID ASSIGN expression
Rule 21    expression -> ID
Rule 22    expression -> INTEGER_CONST
Rule 23    expression -> REAL_CONST
Rule 24    expression -> TRUE
Rule 25    expression -> FALSE
Rule 26    expression -> array_ref
Rule 27    array_ref -> ID LBRACKET expression RBRACKET

Terminals, with rules where they appear

ADD                  : 6
AND                  : 10
ASSIGN               : 5 20
DIV                  : 9
EQ                   : 12
FALSE                : 25
FOR                  : 4
GE                   : 17
GT                   : 15
ID                   : 5 20 21 27
INTEGER_CONST        : 22
LBRACKET             : 5 27
LE                   : 16
LT                   : 14
MUL                  : 8
NE                   : 13
NOT                  : 18
OR                   : 11
RBRACKET             : 5 27
REAL_CONST           : 23
SQRT                 : 19
SUB                  : 7
TRUE                 : 24
error                : 

Nonterminals, with rules where they appear

array_ref            : 26
assign_stmt          : 4
expression           : 4 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 19 20 27
for_list             : 1 3
for_stmt             : 2 3
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . for_list
    (2) for_list -> . for_stmt
    (3) for_list -> . for_stmt for_list
    (4) for_stmt -> . expression FOR expression expression assign_stmt
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    program                        shift and go to state 1
    for_list                       shift and go to state 2
    for_stmt                       shift and go to state 3
    expression                     shift and go to state 4
    array_ref                      shift and go to state 24

state 1

    (0) S' -> program .



state 2

    (1) program -> for_list .

    $end            reduce using rule 1 (program -> for_list .)


state 3

    (2) for_list -> for_stmt .
    (3) for_list -> for_stmt . for_list
    (2) for_list -> . for_stmt
    (3) for_list -> . for_stmt for_list
    (4) for_stmt -> . expression FOR expression expression assign_stmt
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    $end            reduce using rule 2 (for_list -> for_stmt .)
    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    for_stmt                       shift and go to state 3
    for_list                       shift and go to state 25
    expression                     shift and go to state 4
    array_ref                      shift and go to state 24

state 4

    (4) for_stmt -> expression . FOR expression expression assign_stmt

    FOR             shift and go to state 26


state 5

    (6) expression -> ADD . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 27
    array_ref                      shift and go to state 24

state 6

    (7) expression -> SUB . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 28
    array_ref                      shift and go to state 24

state 7

    (8) expression -> MUL . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 29
    array_ref                      shift and go to state 24

state 8

    (9) expression -> DIV . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 30
    array_ref                      shift and go to state 24

state 9

    (10) expression -> AND . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 31
    array_ref                      shift and go to state 24

state 10

    (11) expression -> OR . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 32
    array_ref                      shift and go to state 24

state 11

    (12) expression -> EQ . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 33
    array_ref                      shift and go to state 24

state 12

    (13) expression -> NE . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 34
    array_ref                      shift and go to state 24

state 13

    (14) expression -> LT . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 35
    array_ref                      shift and go to state 24

state 14

    (15) expression -> GT . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 36
    array_ref                      shift and go to state 24

state 15

    (16) expression -> LE . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 37
    array_ref                      shift and go to state 24

state 16

    (17) expression -> GE . expression expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 38
    array_ref                      shift and go to state 24

state 17

    (18) expression -> NOT . expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 39
    array_ref                      shift and go to state 24

state 18

    (19) expression -> SQRT . expression
    (6) expression -> . ADD expression expression
    (7) expression -> . SUB expression expression
    (8) expression -> . MUL expression expression
    (9) expression -> . DIV expression expression
    (10) expression -> . AND expression expression
    (11) expression -> . OR expression expression
    (12) expression -> . EQ expression expression
    (13) expression -> . NE expression expression
    (14) expression -> . LT expression expression
    (15) expression -> . GT expression expression
    (16) expression -> . LE expression expression
    (17) expression -> . GE expression expression
    (18) expression -> . NOT expression
    (19) expression -> . SQRT expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . ID
    (22) expression -> . INTEGER_CONST
    (23) expression -> . REAL_CONST
    (24) expression -> . TRUE
    (25) expression -> . FALSE
    (26) expression -> . array_ref
    (27) array_ref -> . ID LBRACKET expression RBRACKET

    ADD             shift and go to state 5
    SUB             shift and go to state 6
    MUL             shift and go to state 7
    DIV             shift and go to state 8
    AND             shift and go to state 9
    OR              shift and go to state 10
    EQ              shift and go to state 11
    NE              shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    NOT             shift and go to state 17
    SQRT            shift and go to state 18
    ID              shift and go to state 19
    INTEGER_CONST   shift and go to state 20
    REAL_CONST      shift and go to state 21
    TRUE            shift and go to state 22
    FALSE           shift and go to state 23

    expression                     shift and go to state 40
    array_ref                      shift and go to state 24

state 19

    (20) expression -> ID . ASSIGN expression
    (21) expression -> ID .
    (27) array_ref -> ID . LBRACKET expression RBRACKET

    ASSIGN          shift and go to state 41
    FOR             reduce using rule 21 (expression -> ID .)
    ADD             reduce using rule 21 (expression -> ID .)
    SUB             reduce using rule 21 (expression -> ID .)
    MUL             reduce using rule 21 (expression -> ID .)
    DIV             reduce using rule 21 (expression -> ID .)
    AND             reduce using rule 21 (expression -> ID .)
    OR              reduce using rule 21 (expression -> ID .)
    EQ              reduce using rule 21 (expression -> ID .)
    NE              reduce using rule 21 (expression -> ID .)
    LT              reduce using rule 21 (expression -> ID .)
    GT              reduce using rule 21 (expression -> ID .)
    LE              reduce using rule 21 (expression -> ID .)
    GE              reduce using rule 21 (expression -> ID .)
    NOT             reduce using rule 21 (expression -> ID .)
    SQRT            reduce using rule 21 (expression -> ID .)
    ID              reduce using rule 21 (expression -> ID .)
    INTEGER_CONST   reduce using rule 21 (expression -> ID .)
    REAL_CONST      reduce using rule 21 (expression -> ID .)
    TRUE            reduce using rule 21 (expression -> ID .)
    FALSE           reduce using rule 21 (expression -> ID .)
    RBRACKET        reduce using rule 21 (expression -> ID .)
    $end            reduce using rule 21 (expression -> ID .)
    LBRACKET        shift and go to state 42


state 20

    (22) expression -> INTEGER_CONST .
